<resources>
    <string name="app_name">FAirApp</string>
    <string name="slogan">Vì một xã hội truyền cảm hứng </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="device_connecting">Đang kết nối...</string>
    <string name="data_processing">Đang xử lý...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>

    <string name="pm25">Choose a PM</string>

    <string-array name="pm25">
        <item></item>
        <item>PM2.5 > 0</item>
        <item>PM2.5 > 35</item>
        <item>PM2.5 > 75</item>
        <item>PM2.5 > 115</item>
        <item>PM2.5 > 150</item>
        <item>PM2.5 > 250</item>
        <item>PM2.5 > 350</item>
    </string-array>

    <string name="time">Choose a Time</string>

    <string-array name="time">
        <item></item>
        <item>1 ngày</item>
        <item>1 tuần</item>
        <item>1 tháng</item>

    </string-array>

    <string name="addNode">Thêm Node</string>
    <string name="Setting">Cài đặt</string>
    <string name="share">Chia sẻ</string>
    <string name="help">Trợ giúp và phản hồi</string>
    <string name="rate">Đánh giá</string>
    <string name="product">Giới thiệu về sản phẩm </string>
    <string name="map">BẢN ĐỒ</string>
    <string name="watchlist">DANH SÁCH THEO DÕI</string>
    <string name="searchNC">TÌM KIẾM NÂNG CAO</string>
    <string name="humidity">Độ ẩm</string>
    <string name="temperature">Nhiệt độ </string>
    <string name="place">Địa điểm </string>
    <string name="time1">Thời gian</string>
    <string name="search">Tìm</string>
    <string name="cancel">Hủy</string>
    <string name="detail">Chi tiết</string>
    <string name="follow">Theo dõi</string>
    <string name="shownoti">Hiển thị thông báo</string>
    <string name="showwidget">Hiển thị ở witget</string>
    <string name="autodowload">Tự động tải dữ liệu khi có kết nối internet</string>
    <string name="enable_internet">Thiết bị của bạn không kết nối tới Internet. Vui lòng kiểm tra lại</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>


</resources>
