<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_addNode"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/addNode" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/Setting" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_Feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_favorite"
                android:title="@string/rate" />

            <item
                android:id="@+id/nav_introduce"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/product" />
        </menu>
    </item>

</menu>
